deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: datadrift
spec:
  template:
    spec:
      containers:
      - name: datadrift
        image: registry/datadrift:tag
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 9000
          protocol: TCP
        resources:
          requests:
            cpu: 200m
            memory: 256Mi
          limits:
            cpu: 1000m
            memory: 1024Mi
