service.yaml
apiVersion: v1
kind: Service
metadata:
  name: datadrift
spec:
  type: ClusterIP
  ports:
  - port: 9000
    targetPort: 9000
    protocol: TCP
    name: http
  selector:
    app: datadrift
