ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-datadrift
  annotations:
    nginx.ingress.kubernetes.io/http2-push-preload: "true"
    nginx.ingress.kubernetes.io/proxy-buffering: "on"
    nginx.ingress.kubernetes.io/proxy-buffers-number: "4"
    nginx.ingress.kubernetes.io/proxy-buffer-size: "128k"
    nginx.ingress.kubernetes.io/proxy-body-size: 50m
    kubernetes.io/tls-acme: "true"
    ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: datadrift.cmer.fr
    http:
      paths:
      - path: /*
        pathType: Prefix
        backend:
          service:
            name: datadrift
            port:
              number: 9000
  tls:
  - hosts:
    - datadrift.cmer.fr
    secretName: datadrift-crt-tls
